<resources>
    <string name="app_name">Grocery</string>
    <string name="submit">Submit</string>
    <string name="browse">Browse</string>
    <string name="user">User</string>
    <string name="admin">Admin</string>
    <string name="enter_weight">Enter Weight In Grams</string>
    <string name="enter_price">Enter Price</string>
    <string name="enter_desc">Enter Desc</string>
    <string name="category">Category</string>
    <string name="category_deals">Category Deals</string>
    <string name="enter_category_item">Enter Category Item</string>
    <string name="add_category">Add Category</string>
    <string name="add_category_list">Add Category List</string>
    <string name="category_list">Category Items</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product description</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="early_delivery">Early Delivery</string>
    <string name="categories">Categories</string>
    <string name="local_favorites">Local Favorites</string>
    <string name="flipkart">Flipkart</string>
    <string name="grocery">Grocery</string>
    <string name="add">Add</string>
    <string name="sponsored">Sponsored</string>
    <string name="view_all">view all</string>
    <string name="frequently_bought">Frequently bought</string>
    <string name="shop_by_category">shop by category</string>
    <string name="shop_by_category_sub_caption">Prices So Low,Your Mind Will Blow !</string>
    <string name="buy_now">BUY NOW</string>
    <string name="quantity">Quantity</string>
    <string name="add_to_cart">ADD TO CART</string>
</resources>