<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.grocery.category_sub_items.CategoryListViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dropdownMenuCategory"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_32"
                android:layout_marginTop="@dimen/dimen_20"
                android:hint="@string/category"
                app:errorEnabled="@{viewModel.categoryNameErrorEnabled}"
                app:errorText="@{viewModel.categoryNameError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/category"
                    android:inputType="none"
                    android:text="@={viewModel.categoryName}" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCategoryItem"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_32"
                android:layout_marginTop="@dimen/dimen_20"
                android:hint="@string/enter_category_item"
                app:errorEnabled="@{viewModel.categoryitemNameErrorEnabled}"
                app:errorText="@{viewModel.categoryitemNameError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dropdownMenuCategory"
                app:placeholderText="@string/enter_category_name">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@={viewModel.categoryitemName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPrice"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_32"
                android:layout_marginTop="@dimen/dimen_20"
                android:hint="@string/enter_price"
                app:errorEnabled="@{viewModel.categoryitemPriceErrorEnabled}"
                app:errorText="@{viewModel.categoryitemPriceError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilCategoryItem"
                app:placeholderText="@string/enter_price">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:text="@={viewModel.categoryitemPrice}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilWeight"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_32"
                android:layout_marginTop="@dimen/dimen_20"
                android:hint="@string/enter_weight"
                app:errorEnabled="@{viewModel.categoryitemWeightErrorEnabled}"
                app:errorText="@{viewModel.categoryitemWeightError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilPrice"
                app:placeholderText="@string/enter_weight">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:text="@={viewModel.categoryitemWeight}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tildesc"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_32"
                android:layout_marginTop="@dimen/dimen_20"
                android:hint="@string/enter_desc"
                app:counterEnabled="true"
                app:counterMaxLength="500"
                app:errorEnabled="@{viewModel.categoryitemDescErrorEnabled}"
                app:errorText="@{viewModel.categoryitemDescError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilWeight"
                app:placeholderText="@string/enter_desc">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textLongMessage"
                    android:maxLines="10"
                    android:text="@={viewModel.categoryitemDesc}" />


            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCategory"
                isVisible="@{viewModel.showImage,default=false}"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginHorizontal="@dimen/margin_32"
                android:layout_marginTop="4dp"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tildesc"
                tools:srcCompat="@drawable/apple" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUpload"
                isVisible="@{!viewModel.showImage,default=true}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_32"
                android:layout_marginTop="@dimen/dimen_10"
                android:drawableEnd="@drawable/ic_upload_file"
                android:onClick="@{()->viewModel.onBrowseButtonClicked()}"
                android:text="@string/browse"
                app:drawableTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tildesc" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="ivCategory,btnUpload" />


            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_32"
                android:layout_marginTop="@dimen/dimen_10"
                android:enabled="@{viewModel.showImage,default=true}"
                android:onClick="@{()->viewModel.submitButtonClicked()}"
                android:text="@string/submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/barrier" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>