<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.grocery.category.CategoryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCategory"
            isVisible="@{viewModel.showImage,default=false}"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="4dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/apple" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpload"
            isVisible="@{!viewModel.showImage,default=true}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_32"
            android:drawableEnd="@drawable/ic_upload_file"
            android:onClick="@{()->viewModel.onBrowseButtonClicked()}"
            android:text="@string/browse"
            app:drawableTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="ivCategory,btnUpload" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvCategory"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_32"
            android:enabled="@{viewModel.showImage}"
            android:hint="@string/category_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/barrier"
            app:placeholderText="@string/enter_category_name">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={viewModel.categoryName}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_32"
            android:onClick="@{()->viewModel.onSubmitButtonClicked()}"
            android:text="@string/submit"
            android:enabled="@{!viewModel.categoryName.blank &amp;&amp;!viewModel.categoryImagePath.blank}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCategory" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>