<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="details"
            type="com.example.grocery.room.CategoryListItems" />

        <variable
            name="viewModel"
            type="com.example.grocery.details.ProductDetailViewModel" />

        <variable
            name="showAddLayout"
            type="boolean" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/product_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@id/productName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{details.categoryName}"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/productDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@{details.categoryItemDesc}"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintStart_toStartOf="@id/productName"
                app:layout_constraintTop_toBottomOf="@id/productName" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/productImg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_450"
                android:src="@drawable/apple"
                app:image_url="@{details.categoryImagePath}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/productDesc" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:text="M.R.P: "
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/productImg" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/priceValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_8"
                android:text="@{details.offerPrice+``}"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintStart_toEndOf="@id/tvPrice"
                app:layout_constraintTop_toTopOf="@id/tvPrice" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/quantity"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintStart_toStartOf="@id/tvPrice"
                app:layout_constraintTop_toBottomOf="@id/tvPrice" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/addButtonLayout"
                android:layout_width="@dimen/dimen_100"
                android:layout_height="@dimen/dimen_36"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:background="@drawable/bg_add_remove_button"
                android:onClick="@{()->viewModel.onAddLayoutClicked()}"
                app:layout_constraintBottom_toBottomOf="@id/tvQuantity"
                app:layout_constraintStart_toEndOf="@id/tvQuantity"
                app:layout_constraintTop_toTopOf="@id/tvQuantity">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="@dimen/dimen_2"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.7" />


                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/decCountButton"
                    isVisible="@{!showAddLayout}"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/blue"
                    android:src="@drawable/ic_remove"
                    android:tint="@color/white"
                    android:onClick="@{()->viewModel.onRemoveClicked()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAdd"
                    isVisible="@{showAddLayout}"
                    android:layout_width="@dimen/dimen_0"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/add"
                    app:layout_constraintEnd_toEndOf="@id/guideline"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvQuality"
                    isVisible="@{!showAddLayout}"
                    android:layout_width="@dimen/dimen_0"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@{viewModel.itemQuantity+``}"
                    android:textColor="@color/blue"
                    app:layout_constraintEnd_toEndOf="@id/guideline"
                    app:layout_constraintStart_toEndOf="@id/decCountButton" />

                <View
                    android:layout_width="@dimen/dimen_1"
                    android:layout_height="match_parent"
                    android:background="@color/blue"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/guideline"
                    app:layout_constraintStart_toStartOf="@id/guideline"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/incCountButton"
                    android:layout_width="@dimen/dimen_0"
                    android:layout_height="match_parent"
                    android:background="@{!showAddLayout ? @color/blue : @color/transparent,default=@color/transparent}"
                    android:src="@drawable/ic_add"
                    android:onClick="@{()->viewModel.onAddClicked()}"
                    android:tint="@{!showAddLayout ? @color/white : @color/blue,default=@color/blue}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/buyNow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_16"
                android:background="@drawable/rounded_corner"
                android:text="@string/buy_now"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/addToCart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvQuantity" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addToCart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_8"
                android:background="@drawable/rounded_corner"
                android:text="@string/add_to_cart"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/buyNow" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>